Dropbox/Trabalho/Pixeon/Bitbucket/pixeon-eng-sre-platform-04e299f662b3/containers/rancher2/mailcheck-prd/mailcheck-prd-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mailcheck-prd-api
  namespace: mailcheck-prd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mailcheck-prd-api
  template:
    metadata:
      labels:
        app: mailcheck-prd-api
    spec:
      nodeSelector:
        "beta.kubernetes.io/os": linux
      containers:
      - name: mailcheck-prd-api
        image: "registry.pixeon.cloud/pixeon-email-check:latest"
        ports:
        - containerPort: 80
          name: api
---
apiVersion: v1
kind: Service
metadata:
  name: mailcheck-prd-api
  namespace: mailcheck-prd
spec:
  ports:
  - port: 80
  selector:
    app: mailcheck-prd-api
