Dropbox/Trabalho/Pixeon/Bitbucket/pixeon-eng-sre-platform-04e299f662b3/containers/rancher2/mailcheck-prd/mailcheck-prd-redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mailcheck-prd-redis
  namespace: mailcheck-prd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mailcheck-prd-redis
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: mailcheck-prd-redis
    spec:
      nodeSelector:
        "beta.kubernetes.io/os": linux
      containers:
      - name: mailcheck-prd-redis
        image: "redis:5.0.5"
        pullPolicy: IfNotPresent
        args: ["--requirepass", "$(REDIS_PASSWORD)", "--appendonly", "yes", "--save", "900", "1", "--save", "30", "2"]
        ports:
        - containerPort: 6379
          name: redis
        volumeMounts:
        - mountPath: "/data"
          name: mailcheck-prd-redis
      volumes:
        - name: mailcheck-prd-redis
          persistentVolumeClaim:
            claimName: mailcheck-prd-redis
      hostname: mailcheck-prd-redis
---
apiVersion: v1
kind: Service
metadata:
  name: mailcheck-prd-redis
  namespace: mailcheck-prd
spec:
  ports:
  - port: 6379
  selector:
    app: mailcheck-prd-redis
