Dropbox/Trabalho/Pixeon/Bitbucket/pixeon-eng-sre-platform-04e299f662b3/containers/rancher2/mailcheck-prd/mailcheck-prd-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mailcheck-prd-ingress
  namespace: mailcheck-prd
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-production
spec:
  tls:
  - hosts:
    - mailcheck.pixeon.cloud
    - mailcheck-vermelho.pixeon.cloud
    secretName: mailcheck-prd-secret
  rules:
  - host: mailcheck.pixeon.cloud
    http:
      paths:
      - backend:
          serviceName: mailcheck-prd-api
          servicePort: 80
  - host: mailcheck-vermelho.pixeon.cloud
    http:
      paths:
      - backend:
          serviceName: mailcheck-prd-api-vermelho
          servicePort: 80
